--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 />
+<script src="https://www.paypal.com/sdk/js?client-id=AdGhYsMHOXFNuZaeGvMmk6pSey-h_H-6iPL_YtK_taVVIEm6tXjLy-3rfS61yX_M8K_e4t9bT3YbBqYw&currency=CLP"></script>
 
     <title>Esperanza Animal - Tienda</title>
   </head>
